- Created publisher load_cell_data_publisher.py - Created LoadCellDataArray.msg for publisher's topic

--- a/robotic_hw_interfaces/CMakeLists.txt
+++ b/robotic_hw_interfaces/CMakeLists.txt
@@ -21,6 +21,7 @@ endif()
 # Generate service files
 rosidl_generate_interfaces(${PROJECT_NAME}
     "msg/LoadCellData.msg"
+    "msg/LoadCellDataArray.msg"
     "srv/GetLoadCellData.srv"
     DEPENDENCIES builtin_interfaces 
     ADD_LINTER_TESTS
