--- a/robotic_hw/package.xml
+++ b/robotic_hw/package.xml
@@ -7,7 +7,7 @@
   <maintainer email="priyanshu.agrawal@uconn.edu">priyanshu</maintainer>
   <license>TODO: License declaration</license>
 
-  <depend>robotic_hw_interfaces<depend>
+  <depend>robotic_hw_interfaces</depend>
   <depend>rclpy</depend>
 
   <test_depend>ament_copyright</test_depend>
