Minor adjustments, added dependencies and improved comments

--- a/robotic_hw/package.xml
+++ b/robotic_hw/package.xml
@@ -7,8 +7,11 @@
   <maintainer email="priyanshu.agrawal@uconn.edu">priyanshu</maintainer>
   <license>TODO: License declaration</license>
 
+
   <depend>robotic_hw_interfaces</depend>
   <depend>rclpy</depend>
+  
+  <exec_depend>numpy</exec_depend>
 
   <test_depend>ament_copyright</test_depend>
   <test_depend>ament_flake8</test_depend>
